# kerax

./: BUILD.bazel  README.md  WORKSPACE  predict.py  train.py
configs/: BUILD.bazel  cityscapes_segmentation_fcdensenet.py  cityscapes_segmentation_unet.py  mauto_regression_config.py  severstal_classification_resnet50.py  severstal_segmentation_fcdensenet.py
docker/: README.md  kerax_docker.Dockerfile
generators/: BUILD.bazel  README.md  cityscapes_generator.py  generator.py  severstal_generator.py
generators/tests/: BUILD.bazel  cityscapes_generator_test.py  generator_test.py  severstal_generator_test.py
kerax/: ._README.md  BUILD.bazel  README.md  flags.py  predict.py  train.py
kerax/generators/: BUILD.bazel  README.md  cityscapes_generator.py  generator.py  mauto_generator.py  severstal_generator.py
kerax/generators/tests/: BUILD.bazel  cityscapes_generator_test.py  severstal_generator_test.py
kerax/loaders/: BUILD.bazel  README.md  cityscapes_data_loader.py  data_loader.py  mauto_data_loader.py  severstal_data_loader.py
kerax/loaders/tests/: BUILD.bazel  cityscapes_data_loader_test.py  mauto_data_loader_test.py  severstal_data_loader_test.py
kerax/models/: README.md  fc_densenet.py  fcd_blocks.py  model_hub.py  unet.py  unet_blocks.py
kerax/testdata/: BUILD.bazel  chpt.01.hdf5  maximal_config.py  minimal_config.py
kerax/testdata/mauto/: train.txt
kerax/testdata/severstal/: test_set.csv
kerax/utils/: BUILD.bazel  README.md  callbacks.py  general_utils.py  image_utils.py  losses.py  metrics.py
kerax/utils/tests/: BUILD.bazel  general_utils_test.py  image_utils_test.py  losses_test.py  metrics_test.py
loaders/: BUILD.bazel  README.md  cityscapes_data_loader.py  data_loader.py  severstal_data_loader.py
loaders/tests/: BUILD.bazel  cityscapes_data_loader_test.py  severstal_data_loader_test.py
models/: BUILD.bazel  README.md  fc_densenet.py  fcd_blocks.py  model_hub.py  unet.py  unet_blocks.py
testdata/: BUILD.bazel  maximal_config.py  minimal_config.py
utils/: BUILD.bazel  callbacks.py  general_utils.py  image_utils.py  losses.py  metrics.py
utils/tests/: BUILD.bazel  general_utils_test.py  image_utils_test.py  losses_test.py  metrics_test.py
