package(default_visibility = ["//visibility:public"])

py_binary(
    name = "train",
    srcs = [":train.py"],
    deps = [
        ":flags",
        "//kerax/models:model_hub",
        "//kerax/utils:general_utils",
    ],
)

py_binary(
    name = "predict",
    srcs = [":predict.py"],
    deps = [
        ":flags",
        "//kerax/utils:general_utils",
    ],
)

py_library(
    name = "flags",
    srcs = [":flags.py"],
    deps = [
    ],
)
