package(default_visibility = ["//visibility:public"])

filegroup(
    name = "cityscapes/images",
    srcs = glob(["cityscapes/images/**/*.png"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "mauto/images",
    srcs = glob(["mauto/images/**/*.jpg"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "severstal/images",
    srcs = glob(["severstal/images/*.jpg"]),
    visibility = ["//visibility:public"],
)

exports_files([
    "chpt.01.hdf5",
    "minimal_config.py",
    "maximal_config.py",
    "severstal/test_set.csv",
    "mauto/train.txt",
])
